--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@auth0/angular-jwt": "^5.0.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "rxjs": "~6.6.0",
